Pending changes in the mainline
===============================

=> Minimum SDK version: 1.11.3 <=

* updated to Orthanc Framework and SDK 1.11.3


Version 1.3 (2022-11-30)
========================

* new "SenderTransferID" option when creating a transfer.  This id is added as an HTTP Header
  ("sender-transfer-id") in every outgoing request that relates to this transfer and can be used 
  e.g, by a load balancer to route all requests from a single transfer to the same Orthanc.
  If no "SenderTransferID" is provided, a UUID is generated by the plugin.  
  This header is only used in PushMode.
  Note that, when generated by the plugin, the "sender-transfer-id" is NOT the job id (the job id
  does not exist yet at this time) and is NOT the transaction id that is actually generated on the
  receiver side.

Version 1.2 (2022-07-12)
========================

=> Minimum SDK version: 1.5.0 <=

* improved error reporting
* fixed transfer error occuring when the resources to transfer did not fit inside the
  plugin cache (512 MB by default).  The error generated high CPU usage on the sending side
  while compressing large files instead of a simple bucket and in NetworkProtocolError
  on the receiving side.

Version 1.1 (2022-06-22)
========================

* Added "Resources" and "Originator" in the jobs "Content".  "Resources"
  is copied directly from the query that created the job.
* Support of dynamic linking against the system-wide Orthanc framework library


Version 1.0 (2019-03-04)
========================

* Initial release


2018-09-17
==========

* Initial publication of the source code