@@ -4,7 +4,9 @@ Pending changes in the mainline
 => Minimum SDK version: 1.11.3 <=
 
 * updated to Orthanc Framework and SDK 1.11.3
-
+* new "PeerConnectivityTimeout" configuration to configure the HTTP Timeout when checking
+  if a remote peer has the transfer plugin enabled in /transfers/peers GET route.
+  Default value is 2 which was the hardcoded default value in previous versions.
 
 Version 1.3 (2022-11-30)
 ========================
